# codesearch-rs

./: Cargo.toml  LICENSE.txt  README
cindex/: Cargo.toml
cindex/src/: lib.rs
cindex/src/merge/: postmapreader.rs
cindex/src/writer/: error.rs  postentry.rs  postheap.rs  write.rs
codesearch_lib/: Cargo.toml
codesearch_lib/src/: lib.rs
codesearch_lib/src/grep/: grep.rs
codesearch_lib/src/index/: merge.rs  mod.rs  read.rs  regexp.rs  search.rs  write.rs
csearch/: Cargo.toml
csearch/src/: lib.rs
csearch/src/grep/: grep.rs
csearch/src/reader/: read.rs
examples/: cinspect.rs
src/: cindex.rs  csearch.rs  customlogger.rs  main.rs  profiling.rs
src/cindex/src/: lib.rs
src/cindex/src/merge/: merge.rs  postdatawriter.rs
src/cindex/src/writer/: error.rs  postheap.rs  sort_post.rs  trigramiter.rs  write.rs
src/consts/: Cargo.toml
src/consts/src/: lib.rs
src/csearch/: Cargo.toml
src/csearch/src/grep/: grep.rs
src/csearch/src/reader/: read.rs
src/csearch_regex/: matcher.rs
src/customlogger/: Cargo.toml
src/customlogger/src/: lib.rs
src/grep/: grep.rs
src/index/: merge.rs  mod.rs  read.rs  regexp.rs  search.rs  write.rs
src/index/merge/: merge.rs  mod.rs  postdatawriter.rs  postmapreader.rs
src/index/reader/: mod.rs  read.rs
src/index/writer/: error.rs  mod.rs  postentry.rs  postheap.rs  postinglist.rs  sort_post.rs  sparseset.rs  trigramiter.rs  write.rs
src/libcindex/: Cargo.toml
src/libcindex/src/: lib.rs
src/libcindex/src/merge/: merge.rs  postdatawriter.rs  postmapreader.rs
src/libcindex/src/writer/: error.rs  mod.rs  postentry.rs  postheap.rs  postinglist.rs  sort_post.rs  sparseset.rs  trigramiter.rs  write.rs
src/libcindex/tests/: lib.rs
src/libcsearch/: Cargo.toml
src/libcsearch/src/: lib.rs  regexp.rs
src/libcsearch/src/grep/: grep.rs  mod.rs
src/libcsearch/src/reader/: mod.rs  read.rs  search.rs
src/libcustomlogger/: Cargo.toml
src/libcustomlogger/src/: lib.rs
src/libprofiling/: Cargo.toml
src/libvarint/: Cargo.toml
src/libvarint/src/: lib.rs
src/profiling/: Cargo.toml
src/varint/: Cargo.toml
tests/: lib.rs  merge_test.rs  read_test.rs  regexp_test.rs  write_test.rs
tests/common/: mod.rs
varint/src/: lib.rs
