[package]
name = "codesearch-rs"
version = "0.1.0"
authors = ["Vernon Jones <vernonrjones@gmail.com>"]
license = "BSD-3-Clause"
description = "Tool for indexing then performing regular expression searches over large bodies of code"
documentation = "https://github.com/vernonrj/codesearch-rs"
homepage = "https://github.com/vernonrj/codesearch-rs"
repository = "https://github.com/vernonrj/codesearch-rs"

[dependencies]
clap = "1.5.5"
regex = "0.1.48"
regex-syntax = "0.2.2"
log = "0.3.5"

consts = { path = "src/consts" }
libcustomlogger = { path = "src/libcustomlogger" }
libcsearch = { path = "src/libcsearch" }
libcindex = { path = "src/libcindex" }
libprofiling = { path = "src/libprofiling" }
libvarint = { path = "src/libvarint" }

[features]
profile = []


