[package]
name = "codesearch-rs"
version = "0.3.0"
authors = ["Vernon Jones <vernonrjones@gmail.com>"]
license = "BSD-3-Clause"
description = "Tool for indexing then performing regular expression searches over large bodies of code"
documentation = "https://github.com/vernonrj/codesearch-rs"
homepage = "https://github.com/vernonrj/codesearch-rs"
repository = "https://github.com/vernonrj/codesearch-rs"

[dependencies]
ansi_term = { version = "0.7", optional = false }
libc = "0.2"
clap = "2.1"
glob = "0.2"
regex = "0.1"
regex-syntax = "0.2"
log = "0.3"
walkdir = "0.1"

consts = { path = "src/consts" }
libcustomlogger = { path = "src/libcustomlogger" }
libcsearch = { path = "src/libcsearch" }
libcindex = { path = "src/libcindex" }
libprofiling = { path = "src/libprofiling" }
libvarint = { path = "src/libvarint" }

[features]
default = ["color"]
profile = []
color = []


