[package]
name = "cindex"
version = "0.1.0"
authors = ["Vernon Jones <vernonrjones@gmail.com>"]

[dependencies]
byteorder = "0.4.2"
log = "0.3.5"
memmap = "0.2.3"
tempfile = "1.1.3"

consts = { path = "../consts" }
csearch = { path = "../csearch" }
profiling = { path = "../profiling" }
varint = { path = "../varint" }
