[package]
name = "libcindex"
version = "0.1.0"
authors = ["Vernon Jones <vernonrjones@gmail.com>"]

[dependencies]
byteorder = "1.2"
log = "0.3"
memmap = "0.7"
tempfile = "2.1"

consts = { path = "../consts" }
libcsearch = { path = "../libcsearch" }
libprofiling = { path = "../libprofiling" }
libvarint = { path = "../libvarint" }
